--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,27 @@
 basemap==1.0.7
+certifi==14.5.14
+configobj==5.0.6
+curl==7.43.0
 flask==0.10.1
+freetype==2.5.3
+geos==3.4.2
+hdf5==1.8.15.1
+itsdangerous==0.24.0
+Jinja2==2.7.3
+lib-netcdf4==4.3.3.1
+libgfortran==3.0.0
+libpng==1.6.12
+MarkupSafe==0.23
 matplotlib==1.4.3
+MKL==10.3
 netCDF4==1.1.7.1
 numpy==1.9.2
+pyparsing==2.0.3
+python-dateutil==2.4.2
+pytz==2014.9.0
 Shapely==1.5.1
+six==1.9.0
+ssl-match-hostname==3.4.0.2
+tornado==4.2
+werkzeug==0.10.4
+wxPython==2.8.10.1
